<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="custom_app">Пользовательское соглашение</string>
    <string name="massage_developers">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="massage_thx_app">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="my_email">nikgavrilov0210@gmail.com</string>
    <string name="link_android_practicum">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="link_practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
</resources>