<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="@dimen/layout_width_48dp"
            android:layout_height="@dimen/layout_height_48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:src="@drawable/left_strelka_light"
            app:tint="@color/icon_strelka_back_settings">
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/color_title_name"
            android:textSize="@dimen/text_size_20sp"
            style="@style/SettingsTitle"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        style="@style/SettingsBase">

        <Switch
            android:id="@+id/switch_theme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_48dp"
            android:text="@string/dark_theme"
            android:textColor="@color/color_switch_text"
            android:gravity="start"
            android:layout_marginStart="14dp"
            android:textSize="@dimen/text_size_14sp"
            tools:ignore="UseSwitchCompatOrMaterialXml">
        </Switch>
        <Button
            android:id="@+id/share_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            style="@style/SettingsButtonStyle"
            app:icon="@drawable/share_light"
            app:iconTint="@color/icon_color_settings"
            app:iconGravity="end">
        </Button>
        <Button
            android:id="@+id/write_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_support"
            android:layout_marginTop="@dimen/layout_marginTop_10dp"
            style="@style/SettingsButtonStyle"
            app:icon="@drawable/support_light"
            app:iconGravity="end"
            app:iconTint="@color/icon_color_settings">
        </Button>
        <Button
            android:id="@+id/custom_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_app"
            android:layout_marginTop="@dimen/layout_marginTop_10dp"
            style="@style/SettingsButtonStyle"
            app:icon="@drawable/right_strelka_light"
            app:iconGravity="end"
            app:iconTint="@color/icon_color_settings">
        </Button>

    </LinearLayout>

</LinearLayout>
