<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@color/white"
        android:text="@string/playlist_maker"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="33dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/search"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:backgroundTint="@color/white"
            android:textColor="@color/black_text"
            app:icon="@drawable/search_light"
            app:iconGravity="textStart"
            app:iconPadding="3dp"
            app:iconTint="@color/black"
            app:cornerRadius="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/black_text"
            app:cornerRadius="10dp"
            app:icon="@drawable/media_light"
            app:iconGravity="textStart"
            app:iconPadding="4dp"
            app:iconTint="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/black_text"
            app:icon="@drawable/settings_light"
            app:iconGravity="textStart"
            app:iconPadding="3dp"
            app:iconTint="@color/black"
            app:cornerRadius="10dp"/>
    </LinearLayout>


</LinearLayout>