<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/padding_16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@color/white"
        android:text="@string/playlist_maker"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/search"
            android:textSize="@dimen/text_size_20sp"
            android:textAllCaps="false"
            android:backgroundTint="@color/white"
            android:textColor="@color/black_text"
            app:icon="@drawable/search_light"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_4dp"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/corner_radius_12dp"/>

        <Button
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textSize="@dimen/text_size_20sp"
            android:textAllCaps="false"
            android:textColor="@color/black_text"
            app:cornerRadius="@dimen/corner_radius_12dp"
            app:icon="@drawable/media_light"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_4dp"
            app:iconTint="@color/black"/>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textSize="@dimen/text_size_20sp"
            android:textAllCaps="false"
            android:textColor="@color/black_text"
            app:icon="@drawable/settings_light"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_4dp"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/corner_radius_12dp"/>
    </LinearLayout>


</LinearLayout>