<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="20sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Тёмная тема"
            android:textColor="@color/white"
            android:gravity="start"
            android:layout_marginLeft="14dp"
            android:textSize="13sp">

        </Switch>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Поделиться приложением"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:gravity="start"
            android:background="@android:color/transparent"
            app:icon="@drawable/share_light"
            app:iconTint="@color/white"
            app:iconGravity="end">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Написать в поддержку"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/support_light"
            app:iconGravity="end"
            app:iconTint="@color/white"
            >

        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Пользовательское соглашение"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/right_strelka_light"
            app:iconGravity="end"
            app:iconTint="@color/white"
            >
        </Button>


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search"
                android:textSize="10sp"
                android:background="@android:color/transparent"
                app:icon="@drawable/search_light"
                app:iconGravity="textTop"
                app:iconPadding="3dp"
                app:iconTint="@color/white"
                app:cornerRadius="10dp">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/media"
                android:textSize="10sp"
                android:background="@android:color/transparent"
                app:icon="@drawable/media_light"
                app:iconGravity="textTop"
                app:iconPadding="3dp"
                app:iconTint="@color/white"
                app:cornerRadius="10dp">

            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textSize="10sp"
                android:background="@android:color/transparent"
                app:icon="@drawable/settings_light"
                app:iconGravity="textTop"
                app:iconPadding="3dp"
                app:iconTint="@color/white"
                app:cornerRadius="10dp">

            </Button>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
